################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
description = "The Eclipse uProtocol MQTT 5 Transport Library"
edition = "2021"
exclude = [
    "tests/*",
    "tools/*",
    ".devcontainer/*",
    ".vscode/*",
    ".github/*",
    ".gitignore",
]
homepage = "https://github.com/eclipse-uprotocol/up-client-mqtt5-rust"
keywords = ["uProtocol", "SDK", "MQTT", "MQTT5"]
license = "Apache-2.0"
name = "up-transport-mqtt5"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-client-mqtt5-rust"
rust-version = "1.82"
version = "0.3.0-SNAPSHOT"

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
async-channel = { version = "1.6" }
async-trait = { version = "0.1" }
backon = { version = "1.4", default-features = false, features = ["tokio-sleep"] }
bytes = { version = "1.10.1" }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
], optional = true }
futures = { version = "0.3" }
log = { version = "0.4" }
paho-mqtt = { version = "0.13.1", features = ["vendored-ssl"] }
protobuf = { version = "3.7.2" }
tokio = { version = "1.44", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "sync"
] }
up-rust = { version = "0.5.0", default-features = false }

[dev-dependencies]
env_logger = { version = "0.11.7" }
mockall = { version = "0.13" }
test-case = { version = "3.3" }
tokio = { version = "1.44", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync"
] }
up-rust = { version = "0.5.0", default-features = false, features = [
    "test-util",
] }

[[example]]
name = "publisher_example"
required-features = ["cli"]

[[example]]
name = "subscriber_example"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
